@@ -1,5 +1,16 @@
 2008-08-04  Piotr Eljasiak  <epiotr@use.pl>
 
+	* src/gnome-cmd-advrename-dialog.cc:
+	* src/gnome-cmd-con.cc:
+	* src/gnome-cmd-con.h:
+	* src/gnome-cmd-data.cc:
+	* src/gnome-cmd-file-selector.cc:
+	* src/history.cc:
+	* src/history.h:
+	Convert History struct to C++ class
+
+2008-08-04  Piotr Eljasiak  <epiotr@use.pl>
+
 	* src/gnome-cmd-rename-dialog.cc:
 	SHIFT+F6: select file name without ext. This fixes problem #536446
 
